src/test/ui/issue-30302.stderr
warning[E0170]: pattern binding `Nil` is named the same as one of the variants of the type `Stack`
  --> $DIR/issue-30302.rs:23:9
   |
LL |         Nil => true,
   |         ^^^
   |
   = help: if you meant to match on a variant, consider making the path in the pattern qualified: `Stack::Nil`

error: unreachable pattern
  --> $DIR/issue-30302.rs:25:9
   |
LL |         Nil => true,
   |         --- matches any value
LL | //~^ WARN pattern binding `Nil` is named the same as one of the variants of the type `Stack`
LL |         _ => false
   |         ^ unreachable pattern
   |
note: lint level defined here
  --> $DIR/issue-30302.rs:14:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

